--- a/src/main/resources/assets/extraboats/lang/en_us.json
+++ b/src/main/resources/assets/extraboats/lang/en_us.json
@@ -119,16 +119,19 @@
   "item.extraboats.aspen_chest_boat": "Aspen Boat with Chest",
   "item.extraboats.kousa_chest_boat": "Kousa Boat with Chest",
   "item.extraboats.yucca_chest_boat": "Yucca Boat with Chest",
+  "item.extraboats.grimwood_chest_boat": "Grimwood Boat with Chest",
   
   "item.extraboats.rosewood_furnace_boat": "Rosewood Boat with Furnace",
   "item.extraboats.aspen_furnace_boat": "Aspen Boat with Furnace",
   "item.extraboats.kousa_furnace_boat": "Kousa Boat with Furnace",
   "item.extraboats.yucca_furnace_boat": "Yucca Boat with Furnace",
+  "item.extraboats.grimwood_furnace_boat": "Grimwood Boat with Furnace",
   
   "item.extraboats.large_rosewood_boat": "Large Rosewood Boat",
   "item.extraboats.large_aspen_boat": "Large Aspen Boat",
   "item.extraboats.large_kousa_boat": "Large Kousa Boat",
   "item.extraboats.large_yucca_boat": "Large Yucca Boat",
+  "item.extraboats.large_grimwood_boat": "Large Grimwood Boat",
   
   
   "_comment": "Autumnity",
