--- a/src/main/resources/assets/extraboats/lang/es_es.json
+++ b/src/main/resources/assets/extraboats/lang/es_es.json
@@ -116,19 +116,22 @@
   "_comment": "Atmospheric",
   
   "item.extraboats.rosewood_chest_boat": "Barca de palisandro con cofre",
-  "item.extraboats.aspen_chest_boat": "Barca de álamo temblón con cofre",
+  "item.extraboats.aspen_chest_boat": "Barca de álamo con cofre",
   "item.extraboats.kousa_chest_boat": "Barca de kousa con cofre",
   "item.extraboats.yucca_chest_boat": "Barca de yuca con cofre",
+  "item.extraboats.grimwood_chest_boat": "Barca siniestra con cofre",
   
   "item.extraboats.rosewood_furnace_boat": "Barca de palisandro con horno",
-  "item.extraboats.aspen_furnace_boat": "Barca de álamo temblón con horno",
+  "item.extraboats.aspen_furnace_boat": "Barca de álamo con horno",
   "item.extraboats.kousa_furnace_boat": "Barca de kousa con horno",
   "item.extraboats.yucca_furnace_boat": "Barca de yuca con horno",
+  "item.extraboats.grimwood_furnace_boat": "Barca siniestra con horno",
   
   "item.extraboats.large_rosewood_boat": "Barca de palisandro grande",
-  "item.extraboats.large_aspen_boat": "Barca de álamo temblón grande",
+  "item.extraboats.large_aspen_boat": "Barca de álamo grande",
   "item.extraboats.large_kousa_boat": "Barca de kousa grande",
   "item.extraboats.large_yucca_boat": "Barca de yuca grande",
+  "item.extraboats.large_grimwood_boat": "Barca siniestra grande",
   
   
   "_comment": "Autumnity",
@@ -142,9 +145,5 @@
   
   "item.extraboats.hive_chest_boat": "Barca de panal con cofre",
   "item.extraboats.hive_furnace_boat": "Barca de panal con horno",
-  "item.extraboats.large_hive_boat": "Barca de panal grande",
-
-  
-  "advancements.adventure.get_in_the_boat.title": "¡Todos a bordo!",
-  "advancements.adventure.get_in_the_boat.description": "Sube a una barca grande acompañado de tres aldeanos"
+  "item.extraboats.large_hive_boat": "Barca de panal grande"
 }
