--- a/src/main/resources/assets/extraboats/lang/es_mx.json
+++ b/src/main/resources/assets/extraboats/lang/es_mx.json
@@ -35,7 +35,6 @@
   
   "item.extraboats.cherry_chest_boat": "Bote de cerezo con cofre",
   "item.extraboats.dead_chest_boat": "Bote muerto con cofre",
-  "item.extraboats.ethereal_chest_boat": "Bote etéreo con cofre",
   "item.extraboats.fir_chest_boat": "Bote de abeto blanco con cofre",
   "item.extraboats.hellbark_chest_boat": "Bote de corteza infernal con cofre",
   "item.extraboats.jacaranda_chest_boat": "Bote de jacarandá con cofre",
@@ -48,7 +47,6 @@
   
   "item.extraboats.cherry_furnace_boat": "Bote de cerezo con horno",
   "item.extraboats.dead_furnace_boat": "Bote muerto con horno",
-  "item.extraboats.ethereal_furnace_boat": "Bote etéreo con horno",
   "item.extraboats.fir_furnace_boat": "Bote de abeto blanco con horno",
   "item.extraboats.hellbark_furnace_boat": "Bote de corteza infernal con horno",
   "item.extraboats.jacaranda_furnace_boat": "Bote de jacarandá con horno",
@@ -61,7 +59,6 @@
   
   "item.extraboats.large_cherry_boat": "Bote de cerezo grande",
   "item.extraboats.large_dead_boat": "Bote muerto grande",
-  "item.extraboats.large_ethereal_boat": "Bote etéreo grande",
   "item.extraboats.large_fir_boat": "Bote de abeto blanco grande",
   "item.extraboats.large_hellbark_boat": "Bote de corteza infernal grande",
   "item.extraboats.large_jacaranda_boat": "Bote de jacarandá grande",
@@ -138,12 +135,5 @@
   
   "item.extraboats.maple_chest_boat": "Bote de arce con cofre",
   "item.extraboats.maple_furnace_boat": "Bote de arce con horno",
-  "item.extraboats.large_maple_boat": "Bote de arce grande",
-  
-  
-  "_comment": "Buzzier Bees",
-  
-  "item.extraboats.hive_chest_boat": "Bote de panal con cofre",
-  "item.extraboats.hive_furnace_boat": "Bote de panal con horno",
-  "item.extraboats.large_hive_boat": "Bote de panal grande"
+  "item.extraboats.large_maple_boat": "Bote de arce grande"
 }
