--- a/src/main/resources/assets/extraboats/lang/es_es.json
+++ b/src/main/resources/assets/extraboats/lang/es_es.json
@@ -135,5 +135,27 @@
   
   "item.extraboats.maple_chest_boat": "Barca de arce con cofre",
   "item.extraboats.maple_furnace_boat": "Barca de arce con horno",
-  "item.extraboats.large_maple_boat": "Barca de arce grande"
+  "item.extraboats.large_maple_boat": "Barca de arce grande",
+
+
+  "_comment": "Enhanced Mushrooms",
+
+  "item.extraboats.red_mushroom_chest_boat": "Barca de champiñón rojo con cofre",
+  "item.extraboats.brown_mushroom_chest_boat": "Barca de champiñón marrón con cofre",
+  "item.extraboats.glowshroom_chest_boat": "Barca de champiluz con cofre",
+
+  "item.extraboats.red_mushroom_furnace_boat": "Barca de champiñón rojo con horno",
+  "item.extraboats.brown_mushroom_furnace_boat": "Barca de champiñón marrón con horno",
+  "item.extraboats.glowshroom_furnace_boat": "Barca de champiluz con horno",
+
+  "item.extraboats.large_red_mushroom_boat": "Barca de champiñón rojo grande",
+  "item.extraboats.large_brown_mushroom_boat": "Barca de champiñón marrón grande",
+  "item.extraboats.large_glowshroom_boat": "Barca de champiluz grande",
+
+
+  "_comment": "Hanami",
+
+  "item.extraboats.sakura_chest_boat": "Barca de sakura con cofre",
+  "item.extraboats.sakura_furnace_boat": "Barca de sakura con horno",
+  "item.extraboats.large_sakura_boat": "Barca de sakura grande"
 }
