--- a/src/main/resources/assets/extraboats/lang/de_de.json
+++ b/src/main/resources/assets/extraboats/lang/de_de.json
@@ -1,68 +1,161 @@
 {
-  "entity.extraboats.chest_boat": "Boot mit Kiste",
-  "entity.extraboats.furnace_boat": "Boot mit Ofen",
+  "itemGroup.extraboats": "Extra Boote",
+  
+  
+  "entity.extraboats.chest_boat": "Güterboot",
+  "entity.extraboats.furnace_boat": "Antriebsboot",
   "entity.extraboats.large_boat": "Großes Boot",
   
-  "item.extraboats.oak_chest_boat": "Eichenboot mit Kiste",
-  "item.extraboats.spruce_chest_boat": "Fichtenboot mit Kiste",
-  "item.extraboats.birch_chest_boat": "Birckenboot mit Kiste",
-  "item.extraboats.jungle_chest_boat": "Tropenbaumboot mit Kiste",
-  "item.extraboats.acacia_chest_boat": "Akazienboot mit Kiste",
-  "item.extraboats.dark_oak_chest_boat": "Schwarzeichenboot mit Kiste",
   
-  "item.extraboats.oak_furnace_boat": "Eichenboot mit Ofen",
-  "item.extraboats.spruce_furnace_boat": "Fichtenboot mit Ofen",
-  "item.extraboats.birch_furnace_boat": "Birckenboot mit Ofen",
-  "item.extraboats.jungle_furnace_boat": "Tropenbaumboot mit Ofen",
-  "item.extraboats.acacia_furnace_boat": "Akazienboot mit Ofen",
-  "item.extraboats.dark_oak_furnace_boat": "Schwarzeichenboot mit Ofen",
+  "_comment": "Vanilla",
   
-  "item.extraboats.large_oak_boat": "Großes Eichenboot",
-  "item.extraboats.large_spruce_boat": "Großes Fichtenboot",
-  "item.extraboats.large_birch_boat": "Großes Birckenboot",
-  "item.extraboats.large_jungle_boat": "Großes Tropenbaumboot",
-  "item.extraboats.large_acacia_boat": "Großes Akazienboot",
-  "item.extraboats.large_dark_oak_boat": "Großes Schwarzeichenboot",
+  "item.extraboats.oak_chest_boat": "Eichenholzgüterboot",
+  "item.extraboats.spruce_chest_boat": "Fichtenholzgüterboot",
+  "item.extraboats.birch_chest_boat": "Birkenholzgüterboot",
+  "item.extraboats.jungle_chest_boat": "Tropenholzgüterboot",
+  "item.extraboats.acacia_chest_boat": "Akazienholzgüterboot",
+  "item.extraboats.dark_oak_chest_boat": "Schwarzeichenholzgüterboot",
   
-  "item.extraboats.cherry_chest_boat": "Kirschholzboot mit Kiste",
-  "item.extraboats.dead_chest_boat": "Totholzboot mit Kiste",
-  "item.extraboats.ethereal_chest_boat": "Geisterholzboot mit Kiste",
-  "item.extraboats.fir_chest_boat": "Tannenholzboot mit Kiste",
-  "item.extraboats.hellbark_chest_boat": "Höllenborkenboot mit Kiste",
-  "item.extraboats.jacaranda_chest_boat": "Palisanderholzboot mit Kiste",
-  "item.extraboats.magic_chest_boat": "Zauberholzboot mit Kiste",
-  "item.extraboats.mahogany_chest_boat": "Mahagoniholzboot mit Kiste",
-  "item.extraboats.palm_chest_boat": "Palmenholzboot mit Kiste",
-  "item.extraboats.redwood_chest_boat": "Rotholzboot mit Kiste",
-  "item.extraboats.umbran_chest_boat": "Schattenholzboot mit Kiste",
-  "item.extraboats.willow_chest_boat": "Weidenholzboot mit Kiste",
+  "item.extraboats.oak_furnace_boat": "Eichenholzantriebsboot",
+  "item.extraboats.spruce_furnace_boat": "Fichtenholzantriebsboot",
+  "item.extraboats.birch_furnace_boat": "Birkenholzantriebsboot",
+  "item.extraboats.jungle_furnace_boat": "Tropenholzantriebsboot",
+  "item.extraboats.acacia_furnace_boat": "Akazienholzantriebsboot",
+  "item.extraboats.dark_oak_furnace_boat": "Schwarzeichenholzantriebsboot",
   
-  "item.extraboats.cherry_furnace_boat": "Kirschholzboot mit Ofen",
-  "item.extraboats.dead_furnace_boat": "Totholzboot mit Ofen",
-  "item.extraboats.ethereal_furnace_boat": "Geisterholzboot mit Ofen",
-  "item.extraboats.fir_furnace_boat": "Tannenholzboot mit Ofen",
-  "item.extraboats.hellbark_furnace_boat": "Höllenborkenboot mit Ofen",
-  "item.extraboats.jacaranda_furnace_boat": "Palisanderholzboot mit Ofen",
-  "item.extraboats.magic_furnace_boat": "Zauberholzboot mit Ofen",
-  "item.extraboats.mahogany_furnace_boat": "Mahagoniholzboot mit Ofen",
-  "item.extraboats.palm_furnace_boat": "Palmenholzboot mit Ofen",
-  "item.extraboats.redwood_furnace_boat": "Rotholzboot mit Ofen",
-  "item.extraboats.umbran_furnace_boat": "Schattenholzboot mit Ofen",
-  "item.extraboats.willow_furnace_boat": "Weidenholzboot mit Ofen",
+  "item.extraboats.large_oak_boat": "Großes Eichenholzboot",
+  "item.extraboats.large_spruce_boat": "Großes Fichtenholzboot",
+  "item.extraboats.large_birch_boat": "Großes Birkenholzboot",
+  "item.extraboats.large_jungle_boat": "Großes Tropenholzboot",
+  "item.extraboats.large_acacia_boat": "Großes Akazienholzboot",
+  "item.extraboats.large_dark_oak_boat": "Großes Schwarzeichenholzboot",
+  
+  
+  "_comment": "Biomes O' Plenty",
+  
+  "item.extraboats.cherry_chest_boat": "Kirschholzgüterboot",
+  "item.extraboats.dead_chest_boat": "Totenholzgüterboot",
+  "item.extraboats.fir_chest_boat": "Tannenholzgüterboot",
+  "item.extraboats.hellbark_chest_boat": "Höllenborkenholzgüterboot",
+  "item.extraboats.jacaranda_chest_boat": "Jakarandaholzgüterboot",
+  "item.extraboats.magic_chest_boat": "Zauberholzgüterboot",
+  "item.extraboats.mahogany_chest_boat": "Mahagoniholzgüterboot",
+  "item.extraboats.palm_chest_boat": "Palmholzgüterboot",
+  "item.extraboats.redwood_chest_boat": "Rotholzgüterboot",
+  "item.extraboats.umbran_chest_boat": "Umbraholzgüterboot",
+  "item.extraboats.willow_chest_boat": "Weidenholzgüterboot",
+  
+  "item.extraboats.cherry_furnace_boat": "Kirschholzantriebsboot",
+  "item.extraboats.dead_furnace_boat": "Totenholzantriebsboot",
+  "item.extraboats.fir_furnace_boat": "Tannenholzantriebsboot",
+  "item.extraboats.hellbark_furnace_boat": "Höllenborkenholzantriebsboot",
+  "item.extraboats.jacaranda_furnace_boat": "Jakarandaholzantriebsboot",
+  "item.extraboats.magic_furnace_boat": "Zauberholzantriebsboot",
+  "item.extraboats.mahogany_furnace_boat": "Mahagoniholzantriebsboot",
+  "item.extraboats.palm_furnace_boat": "Palmholzantriebsboot",
+  "item.extraboats.redwood_furnace_boat": "Rotholzantriebsboot",
+  "item.extraboats.umbran_furnace_boat": "Umbraholzantriebsboot",
+  "item.extraboats.willow_furnace_boat": "Weidenholzantriebsboot",
   
   "item.extraboats.large_cherry_boat": "Großes Kirschholzboot",
-  "item.extraboats.large_dead_boat": "Großes Totholzboot",
-  "item.extraboats.large_ethereal_boat": "Großes Geisterholzboot",
+  "item.extraboats.large_dead_boat": "Großes Totenholzboot",
   "item.extraboats.large_fir_boat": "Großes Tannenholzboot",
-  "item.extraboats.large_hellbark_boat": "Großes Höllenborkenboot",
-  "item.extraboats.large_jacaranda_boat": "Großes Palisanderholzboot",
+  "item.extraboats.large_hellbark_boat": "Großes Höllenborkenholzboot",
+  "item.extraboats.large_jacaranda_boat": "Großes Jakarandaholzboot",
   "item.extraboats.large_magic_boat": "Großes Zauberholzboot",
   "item.extraboats.large_mahogany_boat": "Großes Mahagoniholzboot",
-  "item.extraboats.large_palm_boat": "Großes Palmenholzboot",
+  "item.extraboats.large_palm_boat": "Großes Palmholzboot",
   "item.extraboats.large_redwood_boat": "Großes Rotholzboot",
-  "item.extraboats.large_umbran_boat": "Großes Schattenholzboot",
+  "item.extraboats.large_umbran_boat": "Großes Umbraholzboot",
   "item.extraboats.large_willow_boat": "Großes Weidenholzboot",
   
-  "advancements.adventure.get_in_the_boat.title": "Steig ins Boot!",
-  "advancements.adventure.get_in_the_boat.description": "Fahre mit drei Dorfbewohnern in einem großen Boot"
+  
+  "_comment": "Upgrade Aquatic",
+  
+  "item.extraboats.driftwood_chest_boat": "Treibholzgüterboot",
+  "item.extraboats.river_chest_boat": "Flussholzgüterboot",
+  
+  "item.extraboats.driftwood_furnace_boat": "Treibholzantriebsboot",
+  "item.extraboats.river_furnace_boat": "Flussholzantriebsboot",
+  
+  "item.extraboats.large_driftwood_boat": "Großes Treibholzboot",
+  "item.extraboats.large_river_boat": "Großes Flussholzboot",
+  
+  
+  "_comment": "Bamboo Blocks",
+  
+  "item.extraboats.bamboo_chest_boat": "Bambusgüterboot",
+  "item.extraboats.bamboo_furnace_boat": "Bambusantriebsboot",
+  "item.extraboats.large_bamboo_boat": "Großes Bambusboot",
+  
+  
+  "_comment": "Endergetic Expansion",
+  
+  "item.extraboats.poise_chest_boat": "Fassungsholzgüterboot",
+  "item.extraboats.poise_furnace_boat": "Fassungsholzantriebsboot",
+  "item.extraboats.large_poise_boat": "Großes Fassungsholzboot",
+  
+  
+  "_comment": "Bloomful",
+  
+  "item.extraboats.wisteria_chest_boat": "Glyzinienholzgüterboot",
+  "item.extraboats.wisteria_furnace_boat": "Glyzinienholzantriebsboot",
+  "item.extraboats.large_wisteria_boat": "Großes Glyzinienholzboot",
+  
+  
+  "_comment": "Swamp Expansion",
+  
+  "item.extraboats.se_willow_chest_boat": "Weidenholzgüterboot",
+  "item.extraboats.se_willow_furnace_boat": "Weidenholzantriebsboot",
+  "item.extraboats.large_se_willow_boat": "Großes Weidenholzboot",
+  
+  
+  "_comment": "Atmospheric",
+  
+  "item.extraboats.rosewood_chest_boat": "Palisanderholzgüterboot",
+  "item.extraboats.aspen_chest_boat": "Espenholzgüterboot",
+  "item.extraboats.kousa_chest_boat": "Hartriegelholzgüterboot",
+  "item.extraboats.yucca_chest_boat": "Yuccaholzgüterboot",
+  "item.extraboats.grimwood_chest_boat": "Grimmholzgüterboot",
+  
+  "item.extraboats.rosewood_furnace_boat": "Palisanderholzantriebsboot",
+  "item.extraboats.aspen_furnace_boat": "Espenholzantriebsboot",
+  "item.extraboats.kousa_furnace_boat": "Hartriegelholzantriebsboot",
+  "item.extraboats.yucca_furnace_boat": "Yuccaholzantriebsboot",
+  "item.extraboats.grimwood_furnace_boat": "Grimmholzantriebsboot",
+  
+  "item.extraboats.large_rosewood_boat": "Großes Palisanderholzboot",
+  "item.extraboats.large_aspen_boat": "Großes Espenholzboot",
+  "item.extraboats.large_kousa_boat": "Großes Hartriegelholzboot",
+  "item.extraboats.large_yucca_boat": "Großes Yuccaholzboot",
+  "item.extraboats.large_grimwood_boat": "Großes Grimmholzboot",
+  
+  
+  "_comment": "Autumnity",
+  
+  "item.extraboats.maple_chest_boat": "Ahornholzgüterboot",
+  "item.extraboats.maple_furnace_boat": "Ahornholzantriebsboot",
+  "item.extraboats.large_maple_boat": "Großes Ahornholzboot",
+
+
+  "_comment": "Enhanced Mushrooms",
+
+  "item.extraboats.red_mushroom_chest_boat": "Roter-Pilz-Güterboot",
+  "item.extraboats.brown_mushroom_chest_boat": "Brauner-Pilz-Güterboot",
+  "item.extraboats.glowshroom_chest_boat": "Glühpilzgüterboot",
+
+  "item.extraboats.red_mushroom_furnace_boat": "Roter-Pilz-Antriebsboot",
+  "item.extraboats.brown_mushroom_furnace_boat": "Brauner-Pilz-Antriebsboot",
+  "item.extraboats.glowshroom_furnace_boat": "Glühpilzantriebsboot",
+
+  "item.extraboats.large_red_mushroom_boat": "Großes Roter-Pilz-Boot",
+  "item.extraboats.large_brown_mushroom_boat": "Großes Brauner-Pilz-Boot",
+  "item.extraboats.large_glowshroom_boat": "Großes Glühpilzboot",
+
+
+  "_comment": "Hanami",
+
+  "item.extraboats.sakura_chest_boat": "Sakuraholzgüterboot",
+  "item.extraboats.sakura_furnace_boat": "Sakuraholzantriebsboot",
+  "item.extraboats.large_sakura_boat": "Großes Sakuraholzboot"
 }
