--- a/src/main/resources/assets/extraboats/lang/ru_ru.json
+++ b/src/main/resources/assets/extraboats/lang/ru_ru.json
@@ -11,73 +11,78 @@
   
   "item.extraboats.oak_chest_boat": "Дубовая лодка с сундуком",
   "item.extraboats.spruce_chest_boat": "Еловая лодка с сундуком",
-  "item.extraboats.birch_chest_boat": "Березовая лодка с сундуком",
-  "item.extraboats.jungle_chest_boat": "Джунгли лодка с сундуком",
-  "item.extraboats.acacia_chest_boat": "Акация лодка с сундуком",
-  "item.extraboats.dark_oak_chest_boat": "Темная дубовая лодка с сундуком",
+  "item.extraboats.birch_chest_boat": "Берёзовая лодка с сундуком",
+  "item.extraboats.jungle_chest_boat": "Лодка из тропического дерева с сундуком",
+  "item.extraboats.acacia_chest_boat": "Акациевая лодка с сундуком",
+  "item.extraboats.dark_oak_chest_boat": "Лодка из тёмного дуба с сундуком",
   
   "item.extraboats.oak_furnace_boat": "Дубовая лодка с печкой",
   "item.extraboats.spruce_furnace_boat": "Еловая лодка с печкой",
-  "item.extraboats.birch_furnace_boat": "Березовая лодка с печкой",
-  "item.extraboats.jungle_furnace_boat": "Лодка джунглей с печкой",
-  "item.extraboats.acacia_furnace_boat": "Лодка акации с печкой",
-  "item.extraboats.dark_oak_furnace_boat": "Темная дубовая лодка с печкой",
+  "item.extraboats.birch_furnace_boat": "Берёзовая лодка с печкой",
+  "item.extraboats.jungle_furnace_boat": "Лодка из тропического дерева с печкой",
+  "item.extraboats.acacia_furnace_boat": "Акациевая лодка с печкой",
+  "item.extraboats.dark_oak_furnace_boat": "Лодка из тёмного дуба с печкой",
   
   "item.extraboats.large_oak_boat": "Большая дубовая лодка",
   "item.extraboats.large_spruce_boat": "Большая еловая лодка",
-  "item.extraboats.large_birch_boat": "Большая березовая лодка",
-  "item.extraboats.large_jungle_boat": "Большая лодка джунглей",
-  "item.extraboats.large_acacia_boat": "Большая лодка акации",
-  "item.extraboats.large_dark_oak_boat": "Большая лодка тёмного дуба",
+  "item.extraboats.large_birch_boat": "Большая берёзовая лодка",
+  "item.extraboats.large_jungle_boat": "Большая лодка из тропического дерева",
+  "item.extraboats.large_acacia_boat": "Большая лодка из акации",
+  "item.extraboats.large_dark_oak_boat": "Большая лодка из тёмного дуба",
   
   
   "_comment": "Biomes O' Plenty",
   
-  "item.extraboats.cherry_chest_boat": "Cherry Boat with Chest",
-  "item.extraboats.dead_chest_boat": "Dead Boat with Chest",
-  "item.extraboats.ethereal_chest_boat": "Ethereal Boat with Chest",
-  "item.extraboats.fir_chest_boat": "Fir Boat with Chest",
-  "item.extraboats.hellbark_chest_boat": "Hellbark Boat with Chest",
-  "item.extraboats.jacaranda_chest_boat": "Jacaranda Boat with Chest",
-  "item.extraboats.magic_chest_boat": "Magic Boat with Chest",
-  "item.extraboats.mahogany_chest_boat": "Mahogany Boat with Chest",
-  "item.extraboats.palm_chest_boat": "Palm Boat with Chest",
-  "item.extraboats.redwood_chest_boat": "Redwood Boat with Chest",
-  "item.extraboats.umbran_chest_boat": "Umbran Boat with Chest",
-  "item.extraboats.willow_chest_boat": "Willow Boat with Chest",
+  "item.extraboats.cherry_chest_boat": "Вишнёвая лодка с сундуком",
+  "item.extraboats.dead_chest_boat": "Мёртвая лодка с сундуком",
+  "item.extraboats.ethereal_chest_boat": "Эфирная лодка с сундуком",
+  "item.extraboats.fir_chest_boat": "Пихтовая лодка с сундуком",
+  "item.extraboats.hellbark_chest_boat": "Лодка из адской коры с сундуком",
+  "item.extraboats.jacaranda_chest_boat": "Жакарандовая лодка с сундуком",
+  "item.extraboats.magic_chest_boat": "Магическая лодка с сундуком",
+  "item.extraboats.mahogany_chest_boat": "Махагониевая лодка с сундуком",
+  "item.extraboats.palm_chest_boat": "Пальмовая лодка с сундуком",
+  "item.extraboats.redwood_chest_boat": "Лодка из красного дерева с сундуком",
+  "item.extraboats.umbran_chest_boat": "Зловещая лодка с сундуком",
+  "item.extraboats.willow_chest_boat": "Ивовая лодка с сундуком",
   
-  "item.extraboats.cherry_furnace_boat": "Cherry Boat with Furnace",
-  "item.extraboats.dead_furnace_boat": "Dead Boat with Furnace",
-  "item.extraboats.ethereal_furnace_boat": "Ethereal Boat with Furnace",
-  "item.extraboats.fir_furnace_boat": "Fir Boat with Furnace",
-  "item.extraboats.hellbark_furnace_boat": "Hellbark Boat with Furnace",
-  "item.extraboats.jacaranda_furnace_boat": "Jacaranda Boat with Furnace",
-  "item.extraboats.magic_furnace_boat": "Magic Boat with Furnace",
-  "item.extraboats.mahogany_furnace_boat": "Mahogany Boat with Furnace",
-  "item.extraboats.palm_furnace_boat": "Palm Boat with Furnace",
-  "item.extraboats.redwood_furnace_boat": "Redwood Boat with Furnace",
-  "item.extraboats.umbran_furnace_boat": "Umbran Boat with Furnace",
-  "item.extraboats.willow_furnace_boat": "Willow Boat with Furnace",
+  "item.extraboats.cherry_furnace_boat": "Вишнёвая лодка с печкой",
+  "item.extraboats.dead_furnace_boat": "Мёртвая лодка с печкой",
+  "item.extraboats.ethereal_furnace_boat": "Эфирная лодка с печкой",
+  "item.extraboats.fir_furnace_boat": "Пихтовая лодка с печкой",
+  "item.extraboats.hellbark_furnace_boat": "Лодка из адской коры с печкой",
+  "item.extraboats.jacaranda_furnace_boat": "Жакарандовая лодка с печкой",
+  "item.extraboats.magic_furnace_boat": "Магическая лодка с печкой",
+  "item.extraboats.mahogany_furnace_boat": "Махагониевая лодка с печкой",
+  "item.extraboats.palm_furnace_boat": "Пальмовая лодка с печкой",
+  "item.extraboats.redwood_furnace_boat": "Лодка из красного дерева с печкой",
+  "item.extraboats.umbran_furnace_boat": "Зловещая лодка с печкой",
+  "item.extraboats.willow_furnace_boat": "Ивовая лодка с печкой",
   
-  "item.extraboats.large_cherry_boat": "Large Cherry Boat",
-  "item.extraboats.large_dead_boat": "Large Dead Boat",
-  "item.extraboats.large_ethereal_boat": "Large Ethereal Boat",
-  "item.extraboats.large_fir_boat": "Large Fir Boat",
-  "item.extraboats.large_hellbark_boat": "Large Hellbark Boat",
-  "item.extraboats.large_jacaranda_boat": "Large Jacaranda Boat",
-  "item.extraboats.large_magic_boat": "Large Magic Boat",
-  "item.extraboats.large_mahogany_boat": "Large Mahogany Boat",
-  "item.extraboats.large_palm_boat": "Large Palm Boat",
-  "item.extraboats.large_redwood_boat": "Large Redwood Boat",
-  "item.extraboats.large_umbran_boat": "Large Umbran Boat",
-  "item.extraboats.large_willow_boat": "Large Willow Boat",
+  "item.extraboats.large_cherry_boat": "Большая вишнёвая лодка",
+  "item.extraboats.large_dead_boat": "Большая мёртвая лодка",
+  "item.extraboats.large_ethereal_boat": "Большая эфирная лодка",
+  "item.extraboats.large_fir_boat": "Большая пихтовая лодка",
+  "item.extraboats.large_hellbark_boat": "Большая лодка из адской коры",
+  "item.extraboats.large_jacaranda_boat": "Большая жакарандовая лодка",
+  "item.extraboats.large_magic_boat": "Большая магическая лодка",
+  "item.extraboats.large_mahogany_boat": "Большая махагониевая лодка",
+  "item.extraboats.large_palm_boat": "Большая пальмовая лодка",
+  "item.extraboats.large_redwood_boat": "Большая лодка из красного дерева",
+  "item.extraboats.large_umbran_boat": "Большая зловещая лодка",
+  "item.extraboats.large_willow_boat": "Большая ивовая лодка",
   
   
   "_comment": "Upgrade Aquatic",
   
   "item.extraboats.driftwood_chest_boat": "Плавниковая лодка с сундуком",
+  "item.extraboats.river_chest_boat": "Лодка из речного дерева с сундуком",
+  
   "item.extraboats.driftwood_furnace_boat": "Плавниковая лодка с печкой",
+  "item.extraboats.river_furnace_boat": "Лодка из речного дерева с печкой",
+  
   "item.extraboats.large_driftwood_boat": "Большая плавниковая лодка",
+  "item.extraboats.large_river_boat": "Большая лодка из речного дерева",
   
   
   "_comment": "Bamboo Blocks",
@@ -114,16 +119,19 @@
   "item.extraboats.aspen_chest_boat": "Осиновая лодка с сундуком",
   "item.extraboats.kousa_chest_boat": "Цветущая лодка с сундуком",
   "item.extraboats.yucca_chest_boat": "Юккавая лодка с сундуком",
+  "item.extraboats.grimwood_chest_boat": "Лодка из мрачного дерева с сундуком",
   
   "item.extraboats.rosewood_furnace_boat": "Розовая лодка с печкой",
   "item.extraboats.aspen_furnace_boat": "Основая лодка с печкой",
   "item.extraboats.kousa_furnace_boat": "Цветущая лодка с печкой",
   "item.extraboats.yucca_furnace_boat": "Юкковая лодка с печкой",
+  "item.extraboats.grimwood_furnace_boat": "Лодка из мрачного дерева с печкой",
   
   "item.extraboats.large_rosewood_boat": "Большая розовая лодка",
   "item.extraboats.large_aspen_boat": "Большая осиновая лодка",
   "item.extraboats.large_kousa_boat": "Большая цветущая лодка",
   "item.extraboats.large_yucca_boat": "Большая юкковая лодка",
+  "item.extraboats.large_grimwood_boat": "Большая лодка из мрачного дерева",
   
   
   "_comment": "Autumnity",
@@ -133,14 +141,9 @@
   "item.extraboats.large_maple_boat": "Большая кленовая лодка",
   
   
-  
   "_comment": "Buzzier Bees",
   
   "item.extraboats.hive_chest_boat": "Ульевая лодка с сундуком",
   "item.extraboats.hive_furnace_boat": "Ульвая лодка с печкой",
-  "item.extraboats.large_hive_boat": "Большая ульевая лодка",
-
-  
-  "advancements.adventure.get_in_the_boat.title": "Садись в лодку!",
-  "advancements.adventure.get_in_the_boat.description": "Прокатитесь на большой лодке с тремя жителями"
+  "item.extraboats.large_hive_boat": "Большая ульевая лодка"
 }
